--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="about">开发技术前线 (www.devtd.cn) 是一个高质量移动技术文章的聚合网站。邮箱 : dev.tech.frontier@gmail.com。</string>
     <string name="not_login">未登录</string>
     <string name="cancel_fav">取消收藏</string>
-    <string name="all">全部</string>
+    <string name="article">文章</string>
     <string name="android">Android</string>
     <string name="ios">iOS</string>
     <string name="favorite">收藏</string>
